# k8s_sandbox

./: README.md  pyproject.toml
.github/workflows/: cd-argocd-app1.yaml  cd-argocd-app2.yaml  cd-argocd-auth.yaml  cd-argocd-promote-dev-to-prod-app1.yaml  cd-argocd-react-frontend.yaml  cd-eks.yaml  ci.yaml
eks/: Makefile  README.md  docker-compose.yml  pyproject.toml
eks/app1/: Dockerfile  README.md  logging_config.py  main.py  pyproject.toml
eks/app1-deployment/: argocd-dev.yaml  argocd-prod.yaml  values-dev.yaml  values-prod.yaml  values.yaml
eks/app1-deployment/templates/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml  servicemonitor.yaml
eks/app1/tests/: test_main.py
eks/app2/: Dockerfile  logging_config.py  main.py  pyproject.toml
eks/app2-deployment/: argocd-dev.yaml  argocd-prod.yaml  values-prod.yaml  values.yaml
eks/app2-deployment/templates/: deployment.yaml
eks/app2/tests/: test_main.py
eks/auth/: Dockerfile  logging_config.py  main.py  middleware.py  pyproject.toml
eks/auth-deployment/: argocd-dev.yaml  argocd-prod.yaml  values-prod.yaml  values.yaml
eks/auth-deployment/templates/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
eks/auth/tests/: test_main.py
eks/grafana/: values_aws_alb.yaml  values_elb.yaml
eks/ingress_alb/: ingress_class_alb_controller.yaml  values-dev.yaml  values-prod.yaml  values.yaml
eks/ingress_alb/templates/: ingress.yaml
eks/ingress_nginx_api/: README.md  values-dev.yaml  values-prod.yaml  values.yaml
eks/ingress_nginx_frontend/: README.md  values-dev.yaml  values-prod.yaml  values.yaml
eks/ingress_nginx_frontend/templates/: ingress.yaml
eks/react-frontend/: Dockerfile  Dockerfile_local  README.md  package-lock.json  package.json
eks/react-frontend-deployment/: Chart.yaml  argocd-dev.yaml  argocd-prod.yaml  values-dev.yaml  values-prod.yaml  values.yaml
eks/react-frontend-deployment/templates/: deployment.yaml  service.yaml
eks/react-frontend/src/: App.tsx
eks/react-frontend/src/components/: FetchApp1Root.tsx  FetchApp2FromApp1.tsx  FetchApp2Root.tsx  LoginForm.tsx  LogoutButton.tsx
local/: Makefile
local/app1/: Dockerfile  main.py  values.yaml
local/app1/templates/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
local/app2/: main.py  values.yaml
local/app2/templates/: deployment.yaml
local/dashboards/: FastAPI App1 - Monitoring-1747015147501.json
local/individual_yaml_no_helm/: fastapi-configmap-app1.yaml  fastapi-deployment-app1.yaml  fastapi-deployment-app2.yaml  fastapi-ingress-multi-service.yaml  fastapi-ingress-single-service.yaml  fastapi-service-clusterip-app1.yaml  fastapi-service-clusterip-app2.yaml  fastapi-service-nodeport-app1.yaml  fastapi-service-nodeport-app2.yaml
local/ingress/: values.yaml
local/ingress/templates/: ingress.yaml
local/metal_lb/: metallb-ip-pool.yaml
